* Reset display_size of TreeView when group is cleared or changed
* Allow relation field to be selected in CSV export
* Hide empty cell on small screen
* Support validate attribute of wizard's Button
* Add infinite scroll

Version 5.4.0 - 2019-11-04
* Bug fixes (see mercurial logs for details)
* Support visual context on tree view
* Support multiselection field
* Support dot notation on PYSON Eval
* Manage sequence
* Add drag and drop on tree views
* Support expand on column
* Set minimal width for columns
* Order Dict keys by sequence
* Support relation fields in domain parser
* Add view modified
* Add Dict widget for tree view

Version 5.2.0 - 2019-05-06
* Bug fixes (see mercurial logs for details)
* Add domain inversion for reference fields
* Add list-form view
* Support HTML widget
* Use locale format for data export
* Add day view on calendar
* Add CSV exports into print toolbar
* Display unread and total of notes
* Use resources method
* Rename roundup.url configuration to bug.url
* Use separate XML parser in Views
* Add range selection with Shift-click
* Use between numbers in filter box
* Fill 'to' with 'from' value on filter box
* Add tab domain in URL
* Use properties
* Allow sao classes to use javascript properties
* Improve layout of CSV import/export
* Add support for height and width on notebook
* Use tab key for tab navigation
* Use record and field properties of widget instead of method arguments
* Reduce offset when no search result
* Add support for plugins
* Add support for expand, height and width attributes
* Add drag & drop support on attachment button

Version 5.0.0 - 2018-10-01
* Bug fixes (see mercurial logs for details)
* Prevent similar tab
* Remove dialog for input file
* Use dropdown for attachment
* Manage icons in input
* Support RTL language direction
* Apply factor on domain parser
* Use tab name in CSV Export/Import
* Add bus management
* Load custom CSS and Javascript
* New icons
* Support timestamp field