@@ -3285,6 +3285,7 @@ function eval_pyson(value){
                 mode: modes,
                 view_ids: (attributes.view_ids || '').split(','),
                 views_preload: attributes.views || {},
+                order: attributes.order,
                 row_activate: this.activate.bind(this),
                 exclude_field: attributes.relation_field || null,
                 limit: null,
@@ -3876,6 +3877,7 @@ function eval_pyson(value){
                 mode: ['tree'],
                 view_ids: (attributes.view_ids || '').split(','),
                 views_preload: attributes.views || {},
+                order: attributes.order,
                 row_activate: this.activate.bind(this),
                 limit: null
             });
